Simulador KP_GA

--- a/recursos.html
+++ b/recursos.html
@@ -108,7 +108,7 @@
                     <li><a href="#" class="text-[#00796B] hover:underline">Guía de preparación para el examen de [Materia]</a> - Incluye preguntas de práctica y resúmenes.</li>
                     <li><a href="#" class="text-[#00796B] hover:underline">Lista de lecturas recomendadas para [Campo de Estudio]</a> - Artículos y libros fundamentales.</li>                    
                     <li><a href="rprivado.html" class="text-[#00796B] hover:underline">Recursos privados</a> - Artículos y libros fundamentales.</li>
-
+                    <li><a href="simulador/KP_GA.html" class="text-[#00796B] hover:underline">Simulador Knapsack Problem </a> - Simulación del problema de la mochila.</li>
                 </ul>
             </div>
         </section>
