Cambio título simulador KP_GA

--- a/simulador/KP_GA.html
+++ b/simulador/KP_GA.html
@@ -56,7 +56,7 @@
     <div class="container mx-auto p-4 md:p-8 max-w-7xl">
         <!-- Header -->
         <header class="text-center mb-8">
-            <h1 class="text-4xl font-bold text-slate-900">Simulador del Problema de la Mochila</h1>
+            <h1 class="text-4xl font-bold text-slate-900">Empaca y vence: tu ingenio vs. la evolución algorítmica</h1>
             <p class="text-lg text-slate-600 mt-2">¡Intenta llenar la mochila para maximizar el valor sin pasarte del peso!</p>
         </header>
 
