Cambio textos simulador KP_GA

--- a/simulador/KP_GA.html
+++ b/simulador/KP_GA.html
@@ -65,7 +65,7 @@
             <div>
                 <!-- Available Items -->
                 <div class="bg-white p-6 rounded-xl shadow-md mb-8">
-                    <h2 class="text-2xl font-bold mb-4">Cajas Disponibles</h2>
+                    <h2 class="text-2xl font-bold mb-4">Cajas disponibles</h2>
                     <!-- New input for number of items -->
                     <div class="flex items-center gap-4 mb-4">
                         <label for="num-items-input" class="font-semibold text-slate-600">Número de cajas:</label>
@@ -78,7 +78,7 @@
 
                 <!-- Knapsack -->
                 <div class="bg-white p-6 rounded-xl shadow-md sticky top-8">
-                    <h2 class="text-2xl font-bold mb-4">Tu Mochila</h2>
+                    <h2 class="text-2xl font-bold mb-4">Tu mochila</h2>
                     <div id="knapsack-container" class="min-h-[200px] drop-zone rounded-lg p-4 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4">
                         <!-- Dropped items will appear here -->
                     </div>
@@ -92,7 +92,7 @@
                 <!-- Knapsack Capacity -->
                 <div class="mb-6">
                     <div class="flex justify-between items-baseline mb-1">
-                        <span class="font-semibold text-slate-600">Capacidad Máxima</span>
+                        <span class="font-semibold text-slate-600">Capacidad máxima</span>
                         <span id="max-weight-display" class="font-bold text-lg text-slate-800"></span>
                     </div>
                     <div class="w-full bg-slate-200 rounded-full h-4">
@@ -103,11 +103,11 @@
                 <!-- User's Score -->
                 <div class="space-y-4">
                     <div class="flex justify-between items-center p-4 bg-slate-100 rounded-lg">
-                        <span class="font-semibold">Peso Actual:</span>
+                        <span class="font-semibold">Peso actual:</span>
                         <span id="current-weight" class="text-xl font-bold">0 kg</span>
                     </div>
                     <div class="flex justify-between items-center p-4 bg-slate-100 rounded-lg">
-                        <span class="font-semibold">Valor Total:</span>
+                        <span class="font-semibold">Valor total:</span>
                         <span id="current-value" class="text-xl font-bold text-green-600">0</span>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                 <!-- Action Button -->
                 <div class="mt-8 text-center">
                     <button id="solve-button" class="w-full bg-indigo-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-indigo-700 transition-colors duration-300 disabled:bg-slate-400 disabled:cursor-not-allowed">
-                        ¡Calcular Solución Óptima!
+                        ¡Calcular Solución!
                     </button>
                     <p id="loading-text" class="mt-4 text-slate-500 hidden">Calculando con algoritmo genético...</p>
                 </div>
