color2 fondo simulador KP_GA

--- a/simulador/KP_GA.html
+++ b/simulador/KP_GA.html
@@ -11,6 +11,7 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
+            background-color: #FDF8F0; /* Light Beige/Gray */
         }
         .item-box {
             transition: all 0.2s ease-in-out;
