--- a/recursos.html
+++ b/recursos.html
@@ -17,8 +17,7 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-/*            background-color: #F5F5F5; /* Light Beige/Gray */
-            background-color: #FDF8F0; /* Light Beige/Gray */
+            background-color: #F5F5F5; /* Light Beige/Gray */
             color: #333333; /* Dark Gray for text */
         }
         /* Active link style */
