color3 fondo simulador KP_GA

--- a/simulador/KP_GA.html
+++ b/simulador/KP_GA.html
@@ -115,7 +115,7 @@
                 
                 <!-- Action Button -->
                 <div class="mt-8 text-center">
-                    <button id="solve-button" class="w-full bg-indigo-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-indigo-700 transition-colors duration-300 disabled:bg-slate-400 disabled:cursor-not-allowed">
+                    <button id="solve-button" class="w-full bg-[#FDF8F0] text-white font-bold py-3 px-6 rounded-lg hover:bg-[#EEDFCF] transition-colors duration-300 disabled:bg-slate-400 disabled:cursor-not-allowed">
                         ¡Calcular Solución!
                     </button>
                     <p id="loading-text" class="mt-4 text-slate-500 hidden">Calculando con algoritmo genético...</p>
