--- a/simulador/KP_GA.html
+++ b/simulador/KP_GA.html
@@ -11,7 +11,8 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #FDF8F0; /* Light Beige/Gray */
+            background-color: #EEDFCF;
+            color: #1a1a1a; /* opcional: asegura contraste */
         }
         .item-box {
             transition: all 0.2s ease-in-out;
