simulador SP_GA

--- a/recursos.html
+++ b/recursos.html
@@ -109,6 +109,7 @@
                     <li><a href="#" class="text-[#00796B] hover:underline">Lista de lecturas recomendadas para [Campo de Estudio]</a> - Artículos y libros fundamentales.</li>                    
                     <li><a href="rprivado.html" class="text-[#00796B] hover:underline">Recursos privados</a> - Artículos y libros fundamentales.</li>
                     <li><a href="simulador/KP_GA.html" class="text-[#00796B] hover:underline">Simulador Knapsack Problem </a> - Simulación del problema de la mochila.</li>
+                    <li><a href="simulador/SP_GA.html" class="text-[#00796B] hover:underline">Simulador Scheduling Problem </a> - Simulación de un problema de la producción.</li>
                 </ul>
             </div>
         </section>
