he añadido simulador twvrp en recursos

--- a/recursos.html
+++ b/recursos.html
@@ -110,6 +110,7 @@
                     <li><a href="rprivado.html" class="text-[#00796B] hover:underline">Recursos privados</a> - Artículos y libros fundamentales.</li>
                     <li><a href="simulador/KP_GA.html" class="text-[#00796B] hover:underline">Simulador Knapsack Problem </a> - Simulación del problema de la mochila.</li>
                     <li><a href="simulador/SP_GA.html" class="text-[#00796B] hover:underline">Simulador Scheduling Problem </a> - Simulación de un problema de la producción.</li>
+                    <li><a href="simulador/TWVRP.html" class="text-[#00796B] hover:underline">Simulador Scheduling Problem </a> - Simulación de un problema de ruteo de vehículos.</li>
                 </ul>
             </div>
         </section>
