--- a/simulador/SP_GA.html
+++ b/simulador/SP_GA.html
@@ -59,9 +59,9 @@
         }
     </style>
 </head>
-<body class="p-4 md:p-8">
+<body class="bg-slate-50 text-slate-800">
 
-    <div class="max-w-7xl mx-auto bg-white rounded-2xl shadow-xl p-6 md:p-8">
+    <div class="container mx-auto p-4 md:p-8 max-w-7xl">
 
 
         <!-- Botón Home -->
