cambios de secciones en recursos

--- a/recursos.html
+++ b/recursos.html
@@ -97,6 +97,19 @@
     <main class="container mx-auto px-6 py-12 flex-grow">
         <!-- RESOURCES PAGE CONTENT -->
         <section class="my-12 fade-in-section">
+            <h2 class="text-3xl font-bold text-center mb-10 text-[#004D40]">Juegos de optimización</h2>
+            <div class="bg-white p-8 rounded-lg shadow-md max-w-4xl mx-auto">
+                <p class="text-gray-700 mb-6">En esta sección se presentan recursos orientados a la enseñanza de problemas de optización.</p>
+                <ul class="list-disc list-inside space-y-4">
+                    <li><a href="simulador/KP_GA.html" class="text-[#00796B] hover:underline">Simulador Knapsack Problem </a> - Simulación del problema de la mochila.</li>
+                    <li><a href="simulador/SP_GA.html" class="text-[#00796B] hover:underline">Simulador Scheduling Problem </a> - Simulación de un problema de la producción.</li>
+                    <li><a href="simulador/TWVRP.html" class="text-[#00796B] hover:underline">Simulador Vehicle Routing Problem </a> - Simulación de un problema de ruteo de vehículos.</li>
+                </ul>
+            </div>
+        </section>
+
+
+        <section class="my-12 fade-in-section">
             <h2 class="text-3xl font-bold text-center mb-10 text-[#004D40]">Recursos académicos</h2>
             <div class="bg-white p-8 rounded-lg shadow-md max-w-4xl mx-auto">
                 <p class="text-gray-700 mb-6">Aquí puedes compartir enlaces a notas de clase, tutoriales, conjuntos de datos, software o cualquier otro recurso que consideres valioso para la comunidad académica.</p>
@@ -108,12 +121,13 @@
                     <li><a href="#" class="text-[#00796B] hover:underline">Guía de preparación para el examen de [Materia]</a> - Incluye preguntas de práctica y resúmenes.</li>
                     <li><a href="#" class="text-[#00796B] hover:underline">Lista de lecturas recomendadas para [Campo de Estudio]</a> - Artículos y libros fundamentales.</li>                    
                     <li><a href="rprivado.html" class="text-[#00796B] hover:underline">Recursos privados</a> - Artículos y libros fundamentales.</li>
-                    <li><a href="simulador/KP_GA.html" class="text-[#00796B] hover:underline">Simulador Knapsack Problem </a> - Simulación del problema de la mochila.</li>
-                    <li><a href="simulador/SP_GA.html" class="text-[#00796B] hover:underline">Simulador Scheduling Problem </a> - Simulación de un problema de la producción.</li>
-                    <li><a href="simulador/TWVRP.html" class="text-[#00796B] hover:underline">Simulador Vehicle Routing Problem </a> - Simulación de un problema de ruteo de vehículos.</li>
+
                 </ul>
             </div>
         </section>
+
+
+
     </main>
 
     <!-- Footer & Contact -->
