--- a/recursos.html
+++ b/recursos.html
@@ -99,7 +99,7 @@
         <section class="my-12 fade-in-section">
             <h2 class="text-3xl font-bold text-center mb-10 text-[#004D40]">Juegos de optimización</h2>
             <div class="bg-white p-8 rounded-lg shadow-md max-w-4xl mx-auto">
-                <p class="text-gray-700 mb-6">En esta sección se presentan recursos orientados a la enseñanza de problemas de optización.</p>
+                <p class="text-gray-700 mb-6">En esta sección se presentan recursos orientados a la enseñanza de problemas de optimización.</p>
                 <ul class="list-disc list-inside space-y-4">
                     <li><a href="simulador/KP_GA.html" class="text-[#00796B] hover:underline">Simulador Knapsack Problem </a> - Simulación del problema de la mochila.</li>
                     <li><a href="simulador/SP_GA.html" class="text-[#00796B] hover:underline">Simulador Scheduling Problem </a> - Simulación de un problema de la producción.</li>
