--- a/simulador/KP_GA.html
+++ b/simulador/KP_GA.html
@@ -57,7 +57,8 @@
 
 <body class="bg-slate-50 text-slate-800">
 
-    <div class="container mx-auto p-4 md:p-8 max-w-7xl">
+  <!--   <div class="container mx-auto p-4 md:p-8 max-w-7xl">-->
+    <div class="container mx-auto p-4 md:p-8 relative">
         <!-- Botón Home -->
         <a href="../index.html" class="absolute top-4 right-4 bg-white hover:bg-slate-100 text-slate-600 font-semibold py-2 px-4 border border-slate-200 rounded-lg shadow-sm flex items-center transition-colors z-10">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
