--- a/simulador/SP_GA.html
+++ b/simulador/SP_GA.html
@@ -61,8 +61,8 @@
 </head>
 <body class="bg-slate-50 text-slate-800">
 
-    <div class="container mx-auto p-4 md:p-8 max-w-7xl">
-
+   <!-- <div class="container mx-auto p-4 md:p-8 max-w-7xl">-->
+    <div class="container mx-auto p-4 md:p-8 relative">
 
         <!-- Botón Home -->
         <a href="../index.html" class="absolute top-4 right-4 bg-white hover:bg-slate-100 text-slate-600 font-semibold py-2 px-4 border border-slate-200 rounded-lg shadow-sm flex items-center transition-colors z-10">
