--- a/simulador/KP_GA.html
+++ b/simulador/KP_GA.html
@@ -67,7 +67,7 @@
             Inicio
         </a>-->
         
-        <div class="absolute top-4 right-4 flex items-center gap-4 z-10">
+    <div class="container mx-auto p-4 md:p-8 relative">
             <a href="../pasarela/buymeacoffee.html" 
                target="_blank" 
                rel="noopener noreferrer" 
