--- a/simulador/KP_GA.html
+++ b/simulador/KP_GA.html
@@ -57,18 +57,9 @@
 
 <body class="bg-slate-50 text-slate-800">
 
-  <!--   <div class="container mx-auto p-4 md:p-8 max-w-7xl">
+  <!--   <div class="container mx-auto p-4 md:p-8 max-w-7xl">-->
     <div class="container mx-auto p-4 md:p-8 relative">
-        <!-- Botón Home -->
-        <a href="../index.html" class="absolute top-4 right-4 bg-white hover:bg-slate-100 text-slate-600 font-semibold py-2 px-4 border border-slate-200 rounded-lg shadow-sm flex items-center transition-colors z-10">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
-            </svg>
-            Inicio
-        </a>-->
-        
-    <div class="container mx-auto p-4 md:p-8 relative">
-            <a href="../pasarela/buymeacoffee.html" 
+           <a href="https://buymeacoffee.com/jvelascoal" 
                target="_blank" 
                rel="noopener noreferrer" 
                class="inline-flex items-center gap-2 bg-yellow-400 text-gray-900 font-bold py-2 px-4 rounded-lg shadow-sm transition-colors duration-300 hover:bg-yellow-500">
@@ -85,8 +76,6 @@
                 </svg>
                 Inicio
             </a>
-        </div>        
-        
 
         <!-- Header -->
         <header class="text-center mb-8">
