--- a/simulador/KP_GA.html
+++ b/simulador/KP_GA.html
@@ -59,6 +59,8 @@
 
   <!--   <div class="container mx-auto p-4 md:p-8 max-w-7xl">-->
     <div class="container mx-auto p-4 md:p-8 relative">
+            <div class="absolute top-4 right-4 flex items-center gap-4 z-10">
+
            <a href="https://buymeacoffee.com/jvelascoal" 
                target="_blank" 
                rel="noopener noreferrer" 
@@ -76,7 +78,7 @@
                 </svg>
                 Inicio
             </a>
-
+</div>
         <!-- Header -->
         <header class="text-center mb-8">
             <h1 class="text-4xl font-bold text-slate-900">Empaca y vence: tu ingenio vs. la evolución algorítmica</h1>
