--- a/simulador/KP_GA.html
+++ b/simulador/KP_GA.html
@@ -80,7 +80,7 @@
             </a>
 </div>
         <!-- Header -->
-        <header class="text-center mb-8">
+        <header class="text-center mb-8 pt-16">
             <h1 class="text-4xl font-bold text-slate-900">Empaca y vence: tu ingenio vs. la evolución algorítmica</h1>
             <p class="text-lg text-slate-600 mt-2">¡Intenta llenar la mochila para maximizar el valor sin pasarte del peso!</p>
         </header>
