--- a/pasarela/buymeacoffee.html
+++ b/pasarela/buymeacoffee.html
@@ -31,15 +31,15 @@
     <header class="bg-white/90 backdrop-blur-lg sticky top-0 z-50 border-b border-gray-200">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <!-- Assumes the main page is named index.html -->
-            <a href="index.html" class="text-2xl font-bold text-[#004D40]">Dr. Jonás Velasco</a>
+            <a href="../index.html" class="text-2xl font-bold text-[#004D40]">Dr. Jonás Velasco</a>
             
             <!-- Desktop Navigation -->
             <div class="hidden md:flex items-center space-x-8">
-                <a href="index.html" class="nav-link text-gray-600 hover:text-[#00796B] transition-colors">Inicio</a>
-                <a href="publicaciones.html" class="nav-link text-gray-600 hover:text-[#00796B] transition-colors">Publicaciones</a>
-                <a href="proyectos.html" class="nav-link text-gray-600 hover:text-[#00796B] transition-colors">Proyectos</a>
-                <a href="recursos.html" class="nav-link active text-gray-600 hover:text-[#00796B] transition-colors">Recursos</a>
-                <a href="contacto.html" class="bg-[#00796B] text-white py-2 px-4 rounded-lg hover:bg-[#004D40] transition-all duration-300 ease-in-out transform hover:scale-105">
+                <a href="../index.html" class="nav-link text-gray-600 hover:text-[#00796B] transition-colors">Inicio</a>
+                <a href="../publicaciones.html" class="nav-link text-gray-600 hover:text-[#00796B] transition-colors">Publicaciones</a>
+                <a href="../proyectos.html" class="nav-link text-gray-600 hover:text-[#00796B] transition-colors">Proyectos</a>
+                <a href="../recursos.html" class="nav-link active text-gray-600 hover:text-[#00796B] transition-colors">Recursos</a>
+                <a href="../contacto.html" class="bg-[#00796B] text-white py-2 px-4 rounded-lg hover:bg-[#004D40] transition-all duration-300 ease-in-out transform hover:scale-105">
                     Contacto
                 </a>
             </div>
@@ -56,11 +56,11 @@
         
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200">
-            <a href="index.html" class="block py-3 px-6 text-sm text-gray-800 hover:bg-gray-100">Inicio</a>
-            <a href="publicaciones.html" class="block py-3 px-6 text-sm text-gray-800 hover:bg-gray-100">Publicaciones</a>
-            <a href="proyectos.html" class="block py-3 px-6 text-sm text-gray-800 hover:bg-gray-100">Proyectos</a>
-            <a href="recursos.html" class="block py-3 px-6 text-sm text-[#00796B] bg-gray-100 font-bold">Recursos</a>
-            <a href="contacto.html" class="block py-3 px-6 text-sm text-gray-800 hover:bg-gray-100">Contacto</a>
+            <a href="../index.html" class="block py-3 px-6 text-sm text-gray-800 hover:bg-gray-100">Inicio</a>
+            <a href="../publicaciones.html" class="block py-3 px-6 text-sm text-gray-800 hover:bg-gray-100">Publicaciones</a>
+            <a href="../proyectos.html" class="block py-3 px-6 text-sm text-gray-800 hover:bg-gray-100">Proyectos</a>
+            <a href="../recursos.html" class="block py-3 px-6 text-sm text-[#00796B] bg-gray-100 font-bold">Recursos</a>
+            <a href="../contacto.html" class="block py-3 px-6 text-sm text-gray-800 hover:bg-gray-100">Contacto</a>
         </div>
     </header>
 
@@ -82,7 +82,7 @@
         <!-- Sección "Sobre mí" -->
         <main>
             <div class="bg-white p-8 rounded-2xl shadow-md">
-                <h2 class="text-2xl font-bold mb-4">Sobre Mi Trabajo</h2>
+                <h2 class="text-2xl font-bold mb-4">Sobre mi trabajo</h2>
                 <p class="text-gray-700 leading-relaxed">
                     ¡Hola! Soy Jonás Velasco y me apasiona crear herramientas útiles y compartir contenido valioso con la comunidad. En este espacio encontrarás tutoriales, proyectos de código abierto y artículos relacionados con análisis de datos, optimización combinatoria y algoritmos aplicados a problemas reales.
                     <br><br>
