--- a/simulador/KP_GA.html
+++ b/simulador/KP_GA.html
@@ -61,7 +61,7 @@
     <div class="container mx-auto p-4 md:p-8 relative">
             <div class="absolute top-4 right-4 flex items-center gap-4 z-10">
 
-           <a href="https://buymeacoffee.com/jvelascoal" 
+           <a href="../pasarela/buymeacoffee.html" 
                target="_blank" 
                rel="noopener noreferrer" 
                class="inline-flex items-center gap-2 bg-yellow-400 text-gray-900 font-bold py-2 px-4 rounded-lg shadow-sm transition-colors duration-300 hover:bg-yellow-500">
