--- a/simulador/KP_GA.html
+++ b/simulador/KP_GA.html
@@ -194,7 +194,7 @@
              <!--   <h2 class="text-2xl font-bold mb-4">Ponte en Contacto</h2> -->
                 <p class="text-gray-300 mb-2">Si tienes alguna pregunta o te gustaría colaborar, no dudes en escribirme.</p>
               <!--  <a href="mailto:jvelasco@cimat.mx" class="text-[#80CBC4] text-lg hover:underline">jvelasco@cimat.mx</a> -->
-                <a href="contacto.html" class="text-[#80CBC4] text-lg hover:underline">Contacto</a>
+                <a href="../contacto.html" class="text-[#80CBC4] text-lg hover:underline">Contacto</a>
                 <p class="text-gray-500 mt-8 text-sm">&copy; 2025 Jonás Velasco. Todos los derechos reservados.</p>
             </div>
         </div>
