--- a/simulador/SSMZ.html
+++ b/simulador/SSMZ.html
@@ -221,7 +221,7 @@
         <div class="max-w-4xl mx-auto mt-4">
             <div class="bg-white p-6 rounded-xl shadow-lg">
                 <h3 class="text-xl font-bold text-gray-800">Referencia:</h3>
-                <p class="mt-2 text-gray-700">Las heurísticas A1, A2 y A3 implementadas en este simulador se basan en el siguiente artículo:</p>
+                <p class="mt-2 text-gray-700">Las heurísticas A1, A2 y A3 implementadas en este juego se basan en el siguiente artículo:</p>
                 <div class="mt-2 pl-4 border-l-4 border-gray-300 text-gray-600">
 <pre class="font-sans whitespace-pre-wrap text-sm">Urbán Rivero, L. E., Velasco, J., & Ramírez Rodríguez, J. (2022). A Simple Greedy Heuristic for Site Specific Management 
 Zone Problem. Axioms, 11(7), 318.</pre>
