--- a/pasarela/buymeacoffee.html
+++ b/pasarela/buymeacoffee.html
@@ -125,7 +125,7 @@
         <div class="container mx-auto px-6 py-10">
             <div class="text-center">
                 <p class="text-gray-300 mb-2">Si tienes alguna pregunta o te gustaría colaborar, no dudes en escribirme.</p>
-                <a href="contacto.html" class="text-[#80CBC4] text-lg hover:underline">Contacto</a>
+                <a href="../contacto.html" class="text-[#80CBC4] text-lg hover:underline">Contacto</a>
                 <p class="text-gray-500 mt-8 text-sm">&copy; 2025 Jonás Velasco. Todos los derechos reservados.</p>
             </div>
         </div>
