--- a/recursos.html
+++ b/recursos.html
@@ -105,6 +105,7 @@
                     <li><a href="simulador/SP_GA.html" class="text-[#00796B] hover:underline">Simulador Scheduling Problem </a> - Simulación de un problema de la producción.</li>
                     <li><a href="simulador/TWVRP.html" class="text-[#00796B] hover:underline">Simulador Vehicle Routing Problem </a> - Simulación de un problema de ruteo de vehículos.</li>
                     <li><a href="simulador/UAFLP.html" class="text-[#00796B] hover:underline">Simulador Unequal Area Facility Layout Problem </a> - Simulación de un problema de ubicación de instalaciones.</li>
+                    <li><a href="simulador/SSMZ.html" class="text-[#00796B] hover:underline">Simulador Site Specific Management Zone Problem</a> - Simulación de un problema de partición de zonas con restricciones.</li>                    
                 </ul>
             </div>
         </section>
