--- a/simulador/SSMZ.html
+++ b/simulador/SSMZ.html
@@ -210,7 +210,7 @@
                         <li><strong>Varianza total (σ²<sub>T</sub>(S))</strong>: Primero, calculamos la varianza de <strong>todos</strong> los valores del grid (las 42 celdas). Esta es la variabilidad de referencia del mapa completo.</li>
                         <li><strong>Identificar zonas (Q)</strong>: Agrupamos todas las celdas que pintaste del mismo color. Cada grupo es una "zona" (q<sub>i</sub>).</li>
                         <li><strong>Calcular el numerador</strong>: Para cada una de tus zonas, calculamos su varianza interna (qué tan dispersos están sus valores). Luego, ponderamos esta varianza por el tamaño de la zona. La suma de estos valores para todas tus zonas es el numerador. Representa la "variabilidad total dentro de tus grupos".</li>
-                        <li><strong>Calcular el denominador</strong>: Multiplicamos la Varianza Total (paso 1) por la resta del número total de celdas (42) y el número de zonas que creaste.</li>
+                        <li><strong>Calcular el denominador</strong>: Multiplicamos la varianza total (paso 1) por la resta del número total de celdas (42) y el número de zonas que creaste.</li>
                         <li><strong>Resultado final</strong>: Si tus zonas son muy homogéneas (valores internos muy parecidos), el numerador será pequeño, y el resultado final se acercará a 1.</li>
                     </ol>
                 </div>
