--- a/recursos.html
+++ b/recursos.html
@@ -112,6 +112,18 @@
 
 
         <section class="my-12 fade-in-section">
+            <h2 class="text-3xl font-bold text-center mb-10 text-[#004D40]">Historietas</h2>
+            <div class="bg-white p-8 rounded-lg shadow-md max-w-4xl mx-auto">
+                <p class="text-gray-700 mb-6">En esta sección se presentan historietas relacionadas con problemas de optimización.</p>
+                <ul class="list-disc list-inside space-y-4">
+                    <li><a href="storybook1/historia1.html" class="text-[#00796B] hover:underline"> Olivia en la tierra de la optimización</a> - Olivia en la tierra de la optimización.</li>
+                </ul>
+            </div>
+        </section>
+
+
+
+        <section class="my-12 fade-in-section">
             <h2 class="text-3xl font-bold text-center mb-10 text-[#004D40]">Recursos académicos</h2>
             <div class="bg-white p-8 rounded-lg shadow-md max-w-4xl mx-auto">
                 <p class="text-gray-700 mb-6">Aquí puedes compartir enlaces a notas de clase, tutoriales, conjuntos de datos, software o cualquier otro recurso que consideres valioso para la comunidad académica.</p>
