--- a/recursos.html
+++ b/recursos.html
@@ -117,6 +117,7 @@
                 <p class="text-gray-700 mb-6">En esta sección se presentan historietas relacionadas con problemas de optimización.</p>
                 <ul class="list-disc list-inside space-y-4">
                     <li><a href="storybook1/historia1.html" class="text-[#00796B] hover:underline"> Olivia en la tierra de la optimización</a> - Olivia en la tierra de la optimización.</li>
+                    <li><a href="storybook2/historia2.html" class="text-[#00796B] hover:underline"> Olivia y el festival de las soluciones brillantes </a> - Olivia y el festival de las soluciones brillantes. </li>                    
                 </ul>
             </div>
         </section>
